# uroborus

./: ._server.py  Dockerfile  README.MD  README.md  __init__.py  data.settings.example.json  launcher.py  pyproject.toml  requirements.txt  server.py
assets/: icon.icns
digital_ruble_agent/: agent.py
digital_ruble_agent/data/: instructions.json
digital_ruble_agent/inference/: ollama_client.py
digital_ruble_agent/rag/: embeddings.py  searcher.py
digital_ruble_agent/skills/: base.py  registry.py
digital_ruble_agent/store/: instructions.json
docs/: ARCHITECTURE.md  RAG.md  RAG_V1.docx  RAG_V2.docx  RAG_v3.docx
docs/raw/: faq.md
logs/rag_cache/: chroma.sqlite3
ouroboros/: agent.py  config.py  consciousness.py  context.py  llm.py  loop.py  safety.py  utils.py
ouroboros/tools/: browser.py  control.py  core.py  evolution_stats.py  knowledge.py  registry.py  review.py  shell.py  vision.py
prompts/: CONSCIOUSNESS.md  SYSTEM.md
scripts/: download_python_standalone.sh
src/: __init__.py  main.py
src/agent/: core.py  core.py.bak  core_new.py
src/tools/: registry.py
supervisor/: ._workers.py  events.py  message_bus.py  queue.py  state.py  workers.py
tests/: test_llm.py  test_smoke.py  test_vision.py
web/: app.js  index.html  style.css
