[tool.poetry]
name = "ouroboros"
version = "3.3.1"
description = "Autonomous digital personality with continuous self-creation"
authors = ["Ouroboros <ouroboros@localhost.local>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.9.1"
starlette = "^0.37.2"
pydantic = "^2.6.1"
python-dotenv = "^1.0.0"
uvicorn = "^0.27.1"
webview = "^4.1.0"
pyperclip = "^1.8.2"
requests = "^2.31.0"
pytest = "^8.0.0"
flake8 = "^7.0.0"
black = "^24.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
flake8 = "^7.0.0"
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
